<resources>
    <string name="app_name">Two Pay</string>
    <string name="fun_scan">Scan</string>
    <string name="fun_pay">Pay</string>
    <string name="fun_transfer">Transfer</string>
    <string name="fun_reload">Reload</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_alert">Wrong Password !</string>
    <string name="login_changeFun">Sign Up</string>
    <string name="signUp_username">Username</string>
    <string name="signUp_usernameAlert">Username invalid !</string>
    <string name="signUp_password">Password</string>
    <string name="signUp_passwordAlert">Password must be at least 6 digits combination of letter, number and symbol</string>
    <string name="signup_code">6 Digit Code</string>
    <string name="signUp_codeAlert">Code must not be continuous number or all same number !</string>
    <string name="signUp_button">Sign Up</string>
    <string name="signUp_changeFun">Login</string>
    <string name="imp_events">Events</string>
    <string name="imp_currency">RM</string>
    <string name="imp_transaction">Recent Transactions</string>
    <string name="appbar_signup">Sign Up</string>
    <string name="appbar_event">Event</string>
    <string name="appbar_transactions">Transactions History</string>
    <string name="appbar_transfer">Transfer</string>
    <string name="appbar_reload">Reload</string>
    <string name="appbar_pay">Receive</string>
    <string name="appbar_scan">Scan</string>
    <string name="appbar_setting">Setting</string>
    <string name="setting_personalInfo">Personal Info</string>
    <string name="setting_contactInfo">Contact Info</string>
    <string name="setting_changePin">Change Pin</string>
    <string name="setting_logout">Logout</string>
    <string name="pay_balance">Balance</string>
    <string name="event_moreInfo">More Info</string>
    <string name="event_description">Description</string>
    <string name="transaction_text">Nothing More</string>
    <string name="transfer_accountNumber">Account Number</string>
    <string name="transfer_amount">Transfer Amount</string>
    <string name="transfer_recipients">Recipient</string>
    <string name="transfer_reference">Reference</string>
    <string name="transfer_button">Transfer</string>
    <string name="reload_input">Enter Amount to Reload</string>
    <string name="reload_preset1">RM 50</string>
    <string name="reload_preset2">RM 100</string>
    <string name="reload_preset3">RM 150</string>
    <string name="reload_preset4">RM 200</string>
    <string name="reload_preset5">RM 250</string>
    <string name="reload_preset6">RM 300</string>
    <string name="reload_button">Reload</string>
    <string name="reload_amount">Reload Amount</string>
    <string name="reload_currency">RM</string>
    <string name="reload_tab_card">Card</string>
    <string name="reload_tab_OnlineBanking">Online Banking</string>
    <string name="reload_addCard">Add new</string>
    <string name="reload_bankPreset1">Maybank</string>
    <string name="reload_bankPreset2">Public Bank</string>
    <string name="reload_cardNum">Card Number</string>
    <string name="relaod_cardExp">MM / YY</string>
    <string name="reload_cardCvv">CVV / CVV 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>