<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="414dp"
        android:layout_height="739dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/gradient_StartColor" />

    <Space
        android:id="@+id/lowerSpace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <Space
        android:id="@+id/upperSpace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/lowerSpace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"

        app:layout_constraintBottom_toTopOf="@+id/lowerSpace"
        app:layout_constraintEnd_toEndOf="@+id/upperSpace"
        app:layout_constraintStart_toStartOf="@+id/upperSpace"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/ic_logo_white" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:drawableBottom="@color/button_yellow"
        android:ems="10"
        android:hint="@string/login_username"
        android:theme="@style/textInputStyle"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lowerSpace"
        app:layout_constraintTop_toTopOf="@+id/lowerSpace"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:inputType="textVisiblePassword|textPassword"
        android:theme="@style/textInputStyle"
        app:layout_constraintBottom_toBottomOf="@+id/lowerSpace"
        app:layout_constraintEnd_toEndOf="@+id/lowerSpace"
        app:layout_constraintStart_toStartOf="@+id/lowerSpace"
        app:layout_constraintTop_toBottomOf="@+id/usernameField"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/signUp_button"
        app:backgroundTint="@color/button_yellow"
        app:layout_constraintBottom_toBottomOf="@+id/lowerSpace"
        app:layout_constraintEnd_toEndOf="@+id/lowerSpace"
        app:layout_constraintStart_toStartOf="@+id/lowerSpace"
        app:layout_constraintTop_toBottomOf="@+id/passwordField"
        app:layout_constraintVertical_bias="0.37" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:stateListAnimator="@null"
        android:text="@string/signUp_changeFun"
        android:textColor="@color/white"
        app:backgroundTint="@color/transparent"
        app:elevation="0dp"
        app:iconTint="@color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/lowerSpace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lowerSpace"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        app:layout_constraintVertical_bias="0.01999998"
        app:strokeColor="#00FFFFFF" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/appbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/highlight_purple"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:collapseIcon="@drawable/ic_chevron_left"
        app:layout_constraintBottom_toTopOf="@+id/logoImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navigationIcon="@drawable/ic_chevron_left_white" />

    <TextView
        android:id="@+id/appBarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appbar_signup"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/appbar"
        app:layout_constraintEnd_toEndOf="@+id/appbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/passwordToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passwordField"
        app:layout_constraintTop_toBottomOf="@+id/upperSpace"
        app:layout_constraintVertical_bias="0.16000003" />

    <CheckBox
        android:id="@+id/passCodeToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/passcodeField"
        app:layout_constraintTop_toBottomOf="@+id/upperSpace"
        app:layout_constraintVertical_bias="0.37" />

    <EditText
        android:id="@+id/passcodeField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/signup_code"
        android:inputType="numberPassword"
        android:theme="@style/textInputStyle"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordField" />

</androidx.constraintlayout.widget.ConstraintLayout>