<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="414dp"
        android:layout_height="739dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_loginback" />

    <Space
        android:id="@+id/lowerSpace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <Space
        android:id="@+id/upperSpace"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/lowerSpace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"

        app:layout_constraintBottom_toTopOf="@+id/lowerSpace"
        app:layout_constraintEnd_toEndOf="@+id/upperSpace"
        app:layout_constraintStart_toStartOf="@+id/upperSpace"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/ic_logo_white" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:drawableBottom="@color/button_yellow"
        android:ems="10"
        android:hint="@string/login_username"
        android:theme="@style/textInputStyle"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lowerSpace"
        app:layout_constraintTop_toTopOf="@+id/lowerSpace"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/login_password"
        android:theme="@style/textInputStyle"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/lowerSpace"
        app:layout_constraintEnd_toEndOf="@+id/lowerSpace"
        app:layout_constraintStart_toStartOf="@+id/lowerSpace"
        app:layout_constraintTop_toBottomOf="@+id/usernameField"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/login_button"
        android:onClick="login"
        app:backgroundTint="@color/button_yellow"
        app:layout_constraintBottom_toBottomOf="@+id/lowerSpace"
        app:layout_constraintEnd_toEndOf="@+id/lowerSpace"
        app:layout_constraintStart_toStartOf="@+id/lowerSpace"
        app:layout_constraintTop_toBottomOf="@+id/passwordField"
        app:layout_constraintVertical_bias="0.37" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:onClick="signUpPage"
        android:stateListAnimator="@null"
        android:text="@string/login_changeFun"
        android:textColor="@color/white"
        app:backgroundTint="@color/transparent"
        app:elevation="0dp"
        app:iconTint="@color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/lowerSpace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/lowerSpace"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        app:layout_constraintVertical_bias="0.01999998"
        app:strokeColor="#00FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>